--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,32 @@
   color: #61dafb;
 }
 
+.listItem {
+  height: 1.5em;
+  display: block;
+  height: 1.2em;
+  margin: .4em;
+  color: #707070;
+}
+
+.listItem .checkbox {
+  width: 10%;
+  float: left;
+}
+.listItem .index {
+  width: 10%;
+  float: left;
+  text-align:left;
+}
+.listItem .title {
+  display: inline;
+  float: left;
+  text-align:left;
+}
+.todoForm {
+  display: block;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
